--- a/body.css
+++ b/body.css
@@ -286,7 +286,7 @@ body{
     }
     .img-logo{
         height:fit-content;
-        display:block;
+        object-fit: cover;
         margin-top: 10px;
     }
 
