--- a/body.css
+++ b/body.css
@@ -285,8 +285,8 @@ body{
         flex-direction: column;
     }
     .img-logo{
-        height:fit-content;
-        object-fit: cover;
+        height:100%;
+        width:100%;
         margin-top: 10px;
     }
 
