--- a/body.css
+++ b/body.css
@@ -285,8 +285,8 @@ body{
         flex-direction: column;
     }
     .img-logo{
-        height:100%;
-        width:auto;
+        width:100%;
+        height:auto;
         margin-top: 10px;
     }
 
