--- a/body.css
+++ b/body.css
@@ -285,8 +285,9 @@ body{
         flex-direction: column;
     }
     .img-logo{
-        width:100%;
+        width:auto;
         height:auto;
+        max-width:100%;
         margin-top: 10px;
     }
 
