--- a/body.css
+++ b/body.css
@@ -286,7 +286,7 @@ body{
     }
     .img-logo{
         height:auto;
-        max-width:100%;
+        width:auto;
         display:block;
     }
 
