--- a/body.css
+++ b/body.css
@@ -285,8 +285,8 @@ body{
         flex-direction: column;
     }
     .img-logo{
-        height:auto;
-        width:50%;
+        height: fit-content;
+        margin-top:10px;
         display:block;
     }
 
