--- a/body.css
+++ b/body.css
@@ -285,7 +285,8 @@ body{
         flex-direction: column;
     }
     .img-logo{
-        height: fit-content;
+        height:fit-content;
+        width:50%;
         margin-top:10px;
         display:block;
     }
