--- a/body.css
+++ b/body.css
@@ -285,8 +285,8 @@ body{
         flex-direction: column;
     }
     .img-logo{
-        height:fit-content;
-        width:50%;
+        height:auto;
+        width:150px;
         margin-top:10px;
         display:block;
     }
