--- a/body.css
+++ b/body.css
@@ -285,6 +285,7 @@ body{
         flex-direction: column;
     }
     .img-logo{
+        max-width: 100px;
         height:auto;
         display: block;
     }
