--- a/body.css
+++ b/body.css
@@ -287,7 +287,7 @@ body{
     .img-logo{
         max-width: 100%;
         width:100px;
-        height:auto;
+        height:50px;
         display: block;
     }
 
