--- a/body.css
+++ b/body.css
@@ -285,7 +285,7 @@ body{
     }
     .img-logo{
         max-width:100%;
-        height:150px;
+        height:fit-content;
         display: block;
     }
 
