--- a/body.css
+++ b/body.css
@@ -284,8 +284,8 @@ body{
         flex-direction: column;
     }
     .img-logo{
-        max-width:100%;
-        height:fit-content;
+        width:100%;
+        height:auto;
         display: block;
     }
 
