--- a/body.css
+++ b/body.css
@@ -280,7 +280,7 @@ body{
         z-index: 1;
     }
     .img-logo{
-        margin-top:10px
+        margin-top:10px;
         height:auto;
         max-width:150px;
         display:block;
