--- a/body.css
+++ b/body.css
@@ -292,7 +292,12 @@ body{
 
 
     .grid-service{
-        margin-bottom: 1500px;
+        margin-bottom: 800px;
+    }
+
+    .grid-service:last-of-type{
+        margin-bottom: 1000px;
+        
     }
     .svc-row{
         flex-direction: column;
