--- a/header.css
+++ b/header.css
@@ -162,6 +162,8 @@ nav li:first-child{
     padding: 10px 0;
     text-align: center;
     margin-top: auto;
+     position: absolute;
+    width: 100%;
 
 }
 
